--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,25 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
-aws-sdk-cloudwatch = "1.55.0"
-aws-sdk-cloudwatchlogs = "1.58.0"
-chrono = "0.4.38"
+aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
+aws-sdk-cloudwatch = "1.63"
+aws-sdk-cloudwatchlogs = "1.68"
+aws-smithy-runtime = { version = "1.7.7",  features = ["connector-hyper-0-14-x", "client"] }
+chrono = "0.4.39"
 chronoutil = "0.2.7"
-clap = { version = "4.5.21", features = ["cargo", "derive"] }
+clap = { version = "4.5.27", features = ["cargo", "derive"] }
 eyre = "0.6.12"
 humantime = "2.1.0"
-serde_json = "1.0.128"
-sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
+hyper = { version = "0.14", features = ["client"] }
+hyper-rustls = "0.24.2"
+log = { version = "0.4", features = ["std"] }
+rustls = { version = "0.21",  features = ["default"] }
+serde_json = "1.0.138"
+sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
 tokio = { version = "1", features = ["full"] }
-uuid = { version = "1.11.0", features = ["v4"] }
+uuid = { version = "1.12.1", features = ["v4"] }
+
+[profile.release]
+strip = true
+opt-level = "z"
+codegen-units = 1
