--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,24 @@ aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
 aws-sdk-cloudwatch = "1.63"
 aws-sdk-cloudwatchlogs = "1.68"
 aws-smithy-runtime = { version = "1.7.7",  features = ["connector-hyper-0-14-x", "client"] }
+bytes = "1.10.0"
 chrono = "0.4.39"
-chronoutil = "0.2.7"
 clap = { version = "4.5.27", features = ["cargo", "derive"] }
 eyre = "0.6.12"
+futures-util = "0.3.31"
+headers = "0.4.0"
+http = "1.2.0"
 humantime = "2.1.0"
 hyper = { version = "0.14", features = ["client"] }
-hyper-rustls = "0.24.2"
+hyper-rustls = { version = "0.24", features = ["rustls-native-certs"] }
 log = { version = "0.4", features = ["std"] }
 rustls = { version = "0.21",  features = ["default"] }
+rustls-native-certs = { version = "0.6" }
+rustls-pemfile = "2.2.0"
 serde_json = "1.0.138"
 sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
 tokio = { version = "1", features = ["full"] }
+tokio-rustls = "0.24"
 uuid = { version = "1.12.1", features = ["v4"] }
 
 [profile.release]
