--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
-aws-sdk-cloudwatch = "1.63"
-aws-sdk-cloudwatchlogs = "1.68"
-aws-smithy-runtime = { version = "1.7.7",  features = ["connector-hyper-0-14-x", "client"] }
+aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
+aws-sdk-cloudwatch = "1.66"
+aws-sdk-cloudwatchlogs = "1.71"
+aws-sdk-sts = "1.61"
+aws-smithy-runtime = { version = "1.7.8",  features = ["connector-hyper-0-14-x", "client"] }
 bytes = "1.10.0"
 chrono = "0.4.39"
 clap = { version = "4.5.27", features = ["cargo", "derive"] }
@@ -22,7 +23,7 @@ log = { version = "0.4", features = ["std"] }
 rustls = { version = "0.21",  features = ["default"] }
 rustls-native-certs = { version = "0.6" }
 rustls-pemfile = "2.2.0"
-serde_json = "1.0.138"
+serde_json = "1.0.139"
 sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
 tokio = { version = "1", features = ["full"] }
 tokio-rustls = "0.24"
