--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,39 +4,40 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
-aws-sdk-cloudwatch = "1.74"
-aws-sdk-cloudwatchlogs = "1.83"
-aws-sdk-sts = "1.69"
+aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
+aws-sdk-cloudwatch = "1.92"
+aws-sdk-cloudwatchlogs = "1.103"
+aws-sdk-sts = "1.86"
 aws-smithy-async = "1.2.5"
-aws-smithy-runtime-api = { version = "1.8.0", features = ["client"] }
-aws-smithy-types = "1.3.1"
+aws-smithy-runtime-api = { version = "1.9.0", features = ["client"] }
+aws-smithy-types = "1.3.2"
 bytes = "1.10.1"
-chrono = "0.4.41"
-clap = { version = "4.5.38", features = ["cargo", "derive"] }
+chrono = "0.4.42"
+clap = { version = "4.5.48", features = ["cargo", "derive"] }
 eyre = "0.6.12"
 futures-util = "0.3.31"
-h2 = "0.4.10"
-headers = "0.4.0"
-http = "1.2.0"
-humantime = "2.1.0"
-hyper = { version = "1.6", features = ["client", "http1", "http2"] }
+h2 = "0.4.12"
+headers = "0.4.1"
+http = "1.3.1"
+humantime = "2.3.0"
+hyper = { version = "1.7", features = ["client", "http1", "http2"] }
 hyper-rustls = { version = "0.27", features = ["http2", "http1", "native-tokio", "tls12"] }
-hyper-util = "0.1.12"
+hyper-util = "0.1.17"
 pin-project-lite = "0.2.16"
 rustls = { version = "0.23",  features = ["default"] }
 rustls-native-certs = { version = "0.8" }
 rustls-pemfile = "2.2.0"
 rustls-pki-types = { version = "1.12.0", features = ["std"] }
-serde_json = "1.0.140"
+serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
 tokio = { version = "1", features = ["full"] }
-tokio-rustls = "0.26.2"
+tokio-rustls = "0.26.4"
 tower = "0.5.2"
 tower-service = "0.3.3"
-uuid = { version = "1.16.0", features = ["v4"] }
+uuid = { version = "1.18.1", features = ["v4"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+yansi = { version = "1.0.1", features = ["detect-tty"] }
 
 [profile.release]
 strip = true
