--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .tmp
 parsers
 
+# Nix puts some symlinks here
+result
+
 # Created by https://www.toptal.com/developers/gitignore/api/rust
 # Edit at https://www.toptal.com/developers/gitignore?templates=rust
 
