--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ uuid = { version = "1.18.1", features = ["v4"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 yansi = { version = "1.0.1", features = ["detect-tty"] }
+tabwriter = "1.4.1"
+terminal_size = "0.4.3"
 
 [profile.release]
 strip = true
